plugins {
    id 'java-library'
    id 'maven-publish'
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = mod_group_id
    version = mod_version
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'architectury-plugin'
    apply plugin: 'dev.architectury.loom'

    java.toolchain.languageVersion = JavaLanguageVersion.of(21)

    repositories {
        exclusiveContent {
            forRepository {
                maven {
                    name = "Modrinth"
                    url = "https://api.modrinth.com/maven"
                }
            }
            filter {
                includeGroup "maven.modrinth"
            }
        }
        maven { url = "https://cursemaven.com" } // Backpacked
        maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
        maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
        maven { url = "https://maven.shedaniel.me/" }
        maven {
            url "https://maven.squiddev.cc"
            content {
                includeGroup("cc.tweaked")
            }
        }
        maven {
            name = "Ladysnake Libs"
            url = "https://maven.ladysnake.org/releases"
        }
        maven {
            name = "Fuzss Maven"
            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
        }
        maven {
            name = "ParchmentMC"
            url = "https://maven.parchmentmc.org"
        }
        mavenLocal()
        maven { url = "https://api.modrinth.com/maven" }
        maven {
            name = "Illusive Soulworks maven"
            url = "https://maven.theillusivec4.top/"
        }
        maven {
            name = 'BlameJared Maven'
            url = 'https://maven.blamejared.com'
        }
        maven {
            url = "https://maven.ryanhcode.dev/releases"
            name = "RyanHCode Maven"
        }
        maven { url = "https://maven.terraformersmc.com/" } // Trinkets
        maven {
            name = "NeoForged"
            url = "https://maven.neoforged.net/releases"
        }
        maven { url 'https://maven.wispforest.io/releases' }
        maven { url 'https://maven.su5ed.dev/releases' }
        maven { url 'https://maven.fabricmc.net' }
        }

    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        mappings loom.layered {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${project.parchment_minecraft_version}:${project.parchment_mappings_version}@zip")
        }
    }

    java {
        withSourcesJar()
    }
}